--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -79,6 +79,8 @@
                     <pluginId>grpc-java</pluginId>
                     <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.4.0:exe:${os.detected.classifier}</pluginArtifact>
                     <protocExecutable>F:/todo-todo/protoc-3.3.0-win32/bin/protoc</protocExecutable>
+                    <outputDirectory>${project.build.sourceDirectory}</outputDirectory>
+
                 </configuration>
                 <executions>
                     <execution>
