--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -78,9 +78,9 @@
                     <protocArtifact>com.google.protobuf:protoc:3.1.0:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
                     <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.4.0:exe:${os.detected.classifier}</pluginArtifact>
-                    <protocExecutable>F:/todo-todo/protoc-3.3.0-win32/bin/protoc</protocExecutable>
+                    <protocExecutable>${project.basedir}/protoc-3.3.0-win32/bin/protoc</protocExecutable>
                     <outputDirectory>${project.build.sourceDirectory}</outputDirectory>
-
+                    <clearOutputDirectory>false</clearOutputDirectory>
                 </configuration>
                 <executions>
                     <execution>
